refactor(password): rename UpdatePasswordReq to UpdatePasswordBody and update related references
